--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <div class="forms-wrap">
             <form action="index.html" autocomplete="off" class="sign-in-form">
               <div class="logo">
-                <img src="/img/logo.png" alt="easyclass" />
+                <img src="img/logo.png" alt="easyclass" />
                 <h4>My Profile</h4>
               </div>
 
@@ -58,7 +58,7 @@
 
             <form action="index.html" autocomplete="off" class="sign-up-form">
               <div class="logo">
-                <img src="/img/logo.png" alt="easyclass" />
+                <img src="img/logo.png" alt="easyclass" />
                 <h4>easyclass</h4>
               </div>
 
@@ -114,9 +114,9 @@
 
           <div class="carousel">
             <div class="images-wrapper">
-              <img src="/img/image1.png" class="image img-1 show" alt="" />
-              <img src="/img/image2.png" class="image img-2" alt="" />
-              <img src="/img/image3.png" class="image img-3" alt="" />
+              <img src="img/image1.png" class="image img-1 show" alt="" />
+              <img src="img/image2.png" class="image img-2" alt="" />
+              <img src="img/image3.png" class="image img-3" alt="" />
             </div>
 
             <div class="text-slider">
